--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoClosingMessageBox" version="1.0.0.2" targetFramework="net472" />
+  <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="3.6.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
