--- a/Babat Taxi.csproj
+++ b/Babat Taxi.csproj
@@ -150,7 +150,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\loginLogo.png" />
+    <Resource Include="Images\mapLogo.png" />
+    <Resource Include="Images\splashLogo.png" />
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Resources\DictionaryLogin.xaml">
       <SubType>Designer</SubType>
@@ -176,12 +180,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\carlogo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\splash.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
