--- a/Babat Taxi.csproj
+++ b/Babat Taxi.csproj
@@ -111,6 +111,9 @@
     <Compile Include="UserControls\UserControlLogin.xaml.cs">
       <DependentUpon>UserControlLogin.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\UserControlMap.xaml.cs">
+      <DependentUpon>UserControlMap.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UserControlSignUp.xaml.cs">
       <DependentUpon>UserControlSignUp.xaml</DependentUpon>
     </Compile>
@@ -168,6 +171,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\UserControlLogin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UserControlMap.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
