Double click map fixed

--- a/Babat Taxi.csproj
+++ b/Babat Taxi.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Autofac, Version=4.9.4.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>packages\Autofac.4.9.4\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="BingMapsRESTToolkit, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\BingMapsRESTToolkit.1.1.4\lib\net45\BingMapsRESTToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialDesignColors, Version=1.2.0.325, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\MaterialDesignColors.1.2.0\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
@@ -105,6 +108,12 @@
     <Compile Include="Services\IoC.cs" />
     <Compile Include="Services\Writer and reader.cs" />
     <Compile Include="Services\ViewManager.cs" />
+    <Compile Include="UserControls\DragPin.xaml.cs">
+      <DependentUpon>DragPin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\UserControlAccountEdit.xaml.cs">
+      <DependentUpon>UserControlAccountEdit.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UserControlCardInfo.xaml.cs">
       <DependentUpon>UserControlCardInfo.xaml</DependentUpon>
     </Compile>
@@ -166,6 +175,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\DragPin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UserControlAccountEdit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\UserControlCardInfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -194,6 +211,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\finish.png" />
+    <Resource Include="Images\start.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
